Updated double head issue, added url to logo, updated padding and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,13 @@ header {
     box-shadow:         0px 10px 10px 0px rgba(50, 50, 50, 0.8);
     position: fixed;
 }
-
+#profile-img {
+    display: block;
+    text-align: center;
+}
+#profile-img img {
+    width: 50%;
+}
 nav > ul {
     list-style-type: none;
     padding: 0;
@@ -180,8 +186,10 @@ nav > ul > li > a:active {
 }
 main { 
     padding-top: 133px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
-#work {
+.work {
     background-color: #FFFFFF;
     padding: 5px 0;
 
@@ -197,6 +205,8 @@ footer {
     margin-top: 10px;
     padding: 5px 0;
 }
+
+
 .socialmedia {
     display: inline-block;
     max-width: 50px;
